@@ -1,3 +1,20 @@
+/*
+ * bastools
+ * Copyright (C) 2025  Robert Greene
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ */
 package io.github.applecommander.bastools.api;
 
 import java.util.Queue;
@@ -10,8 +27,6 @@ import org.junit.Test;
 import io.github.applecommander.bastools.api.model.Program;
 import io.github.applecommander.bastools.api.model.Token;
 import io.github.applecommander.bastools.api.utils.TokenBuilder;
-
-import javax.xml.crypto.Data;
 
 import static org.junit.Assert.assertEquals;
 
@@ -38,8 +53,8 @@ public class ParserTest {
         Parser parser = new Parser(tokens);
         Program program = parser.parse();
         assertEquals(1, program.lines.size());
-        assertEquals(1, program.lines.get(0).statements.size());
-        Statement statement = program.lines.get(0).statements.get(0);
+        assertEquals(1, program.lines.getFirst().statements.size());
+        Statement statement = program.lines.getFirst().statements.getFirst();
         assertEquals(3, statement.tokens.size());
         assertEquals(ApplesoftKeyword.DATA, statement.tokens.get(0).keyword);
         // In this case, the "-" is treated as text
@@ -57,8 +72,8 @@ public class ParserTest {
         Parser parser = new Parser(tokens);
         Program program = parser.parse();
         assertEquals(1, program.lines.size());
-        assertEquals(1, program.lines.get(0).statements.size());
-        Statement statement = program.lines.get(0).statements.get(0);
+        assertEquals(1, program.lines.getFirst().statements.size());
+        Statement statement = program.lines.getFirst().statements.getFirst();
         assertEquals(4, statement.tokens.size());
         assertEquals(Token.Type.IDENT, statement.tokens.get(0).type);
         assertEquals(ApplesoftKeyword.eq, statement.tokens.get(1).keyword);
